--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^7.1.0",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
     "react-numeric-input": "^2.2.3",
