revu du store, changement de table et ajout de la fonctionnalite reset form

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@tiptap/extension-link": "^2.0.3",
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
-    "datable-react": "^1.0.4",
+    "datatable_react_nicolay": "^0.2.3",
+    "dayjs": "^1.11.8",
     "dropdown-menu-input-react-1": "^1.0.3",
     "embla-carousel-react": "^7.1.0",
     "react": "^18.2.0",
@@ -33,6 +34,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "serve": "^14.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
