--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mantine/carousel": "^6.0.13",
     "@mantine/core": "^6.0.13",
     "@mantine/dates": "^6.0.13",
@@ -24,11 +27,14 @@
     "@tiptap/extension-link": "^2.0.3",
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
+    "bootstrap": "^5.3.0",
     "datatable_react_nicolay": "^0.2.3",
     "dayjs": "^1.11.8",
     "dropdown-menu-input-react-1": "^1.0.3",
     "embla-carousel-react": "^7.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-bs-datatable": "^3.11.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.1",
